force-app/main/default/objects/Craft__c/Craft__c.object-meta.xml
<CustomObject>
    <label>Craft</label>
    <nameField>
        <label>Craft Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crafts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>