force-app/main/default/objects/Craft__c/fields/CraftCode__c.field-meta.xml
<CustomField>
    <fullName>CraftCode__c</fullName>
    <description>The Craft code(This field was created for NPL MA).</description>
    <externalId>true</externalId>
    <label>Craft Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>