force-app/main/default/objects/Craft__c/fields/Description_Short__c.field-meta.xml
<CustomField>
    <fullName>Description_Short__c</fullName>
    <description>The Short Description(This field was created for NPL MA).</description>
    <label>Description Short</label>
    <type>TextArea</type>
</CustomField>