force-app/main/default/objects/Craft__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CraftCode__c</columns>
    <columns>NAME</columns>
    <columns>Description_Short__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>